layout shift fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,13 @@
     --foreground: #ededed;
   }
 }
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
 
 body {
   color: var(--foreground);
